kubernetes/apps/nexus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    toolkit.fluxcd.io/tenant: dev-team
